--- a/index.html
+++ b/index.html
@@ -62,18 +62,8 @@
     script.onload = () => {
       createUnityInstance(canvas, config, p => {
         document.querySelector("#unity-progress-bar-full").style.width = 100 * p + "%";
-      }).then((unityInstance) => {
+      }).then(() => {
         document.querySelector("#unity-loading-bar").style.display = "none";
-        
-        // Force la taille du canvas après le chargement
-        setTimeout(() => {
-          canvas.width = 1000;
-          canvas.height = 650;
-          canvas.style.width = "1000px";
-          canvas.style.height = "750px";
-          console.log("Canvas size forced to 1200x750");
-        }, 1000);
-        
       }).catch(alert);
     };
     document.body.appendChild(script);
