--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="https://www.gstatic.com/firebasejs/11.8.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.8.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.8.1/firebase-functions-compat.js"></script>
   <script>
     // 🔧 Votre configuration Firebase
     const cfg = {
@@ -37,19 +38,68 @@
         console.log("✔ Auth OK, UID:", user.uid);
         // Expose la DB uniquement **après** auth
         window.db = firebase.firestore();
+        window.functions = firebase.app().functions('us-central1');
       })
       .catch(e => console.error("❌ Auth failed:", e));
+  </script>
+
+  <!-- 1b) Bridge Cloud Functions pour Unity WebGL (DllImport "__Internal") -->
+  <script>
+    // Helpers conversion depuis WebGL String pointers si besoin (Unity gère déjà strings ici)
+    function _safe(fn) { try { return fn(); } catch (e) { console.error(e); } }
+
+    async function _callCallable(name, payload) {
+      if (!window.functions) {
+        console.warn('[Bridge] functions pas prêtes, tentative d\'initialisation tardive');
+        window.functions = firebase.app().functions('us-central1');
+      }
+      const callable = window.functions.httpsCallable(name);
+      return callable(payload).then(r => r.data);
+    }
+
+    // Globales attendues par Unity (extern)
+    window.JS_StartRun = function(objectName, callback, errCallback) {
+      _safe(async () => {
+        const data = await _callCallable('startRun', {});
+        if (typeof SendMessage === 'function') SendMessage(objectName, callback, JSON.stringify(data));
+      });
+    };
+
+    window.JS_SubmitRun = function(runId, runToken, finalScore, coins, clientElapsedMs, gameVersion, objectName, callback, errCallback) {
+      _safe(async () => {
+        const payload = { runId, runToken, finalScore: Number(finalScore), coins: Number(coins), clientElapsedMs: Number(clientElapsedMs), gameVersion };
+        try {
+          const data = await _callCallable('submitRun', payload);
+          if (typeof SendMessage === 'function') SendMessage(objectName, callback, JSON.stringify(data));
+        } catch (e) {
+          console.error('[JS_SubmitRun] error', e);
+          if (typeof SendMessage === 'function') SendMessage(objectName, errCallback, (e.message||'error'));
+        }
+      });
+    };
+
+    window.JS_VerifyWallet = function(wallet, message, signature, gameVersion, objectName, callback, errCallback) {
+      _safe(async () => {
+        try {
+          const data = await _callCallable('verifyWallet', { walletAddress: wallet, message, signature });
+          if (typeof SendMessage === 'function') SendMessage(objectName, callback, JSON.stringify(data));
+        } catch (e) {
+          console.error('[JS_VerifyWallet] error', e);
+          if (typeof SendMessage === 'function') SendMessage(objectName, errCallback, (e.message||'error'));
+        }
+      });
+    };
   </script>
 
   <!-- 2) Unity WebGL loader -->
   <script>
     const canvas = document.querySelector("#unity-canvas");
     const buildUrl = "Build";
-    const loaderUrl = `${buildUrl}/de20f721ec32512e2d3005562533ab04.loader.js`;
+    const loaderUrl = `${buildUrl}/05341b76d4a90f70e910dd0a415d4c33.loader.js`;
     const config = {
-      dataUrl: buildUrl + "/086f82586b825ef85baf8f0416de7582.data",
-      frameworkUrl: buildUrl + "/a4b111434138ab99e8bb0a51d9885f7e.framework.js",
-      codeUrl: buildUrl + "/6f01d5e0fbc01d72a0873aa3d5e8049a.wasm",
+      dataUrl: buildUrl + "/32bef8527b7598b339d7f20204f860e6.data",
+      frameworkUrl: buildUrl + "/8074c761530976222072b4543f6265e7.framework.js",
+      codeUrl: buildUrl + "/0f2d6a4d1d0e2cae11df8e643f042ab4.wasm",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "YourCompany",
       productName: "JuiceBoost",
