--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     
     <!-- DIAGNOSTIC: Test direct JavaScript sans Unity -->
     <div style="position: absolute; top: 10px; right: 10px; z-index: 1000; background: rgba(0,0,0,0.8); color: white; padding: 10px; border-radius: 5px;">
-      <button onclick="window.functions.httpsCallable('startRun')({}).then(r => alert('SUCCESS: ' + JSON.stringify(r.data))).catch(e => alert('ERROR: ' + e.message))" style="background: #4CAF50; color: white; border: none; padding: 10px; border-radius: 3px; cursor: pointer;">
-        🧪 Test Direct
+      <button onclick="alert('Button clicked! Firebase functions: ' + (window.functions ? 'Ready' : 'NOT ready'))" style="background: #4CAF50; color: white; border: none; padding: 10px; border-radius: 3px; cursor: pointer; margin-bottom: 5px; display: block;">
+        🧪 Test 1: JS Works?
+      </button>
+      <button onclick="window.functions.httpsCallable('startRun')({}).then(r => alert('SUCCESS: ' + JSON.stringify(r.data))).catch(e => alert('ERROR: ' + e.message))" style="background: #FF9800; color: white; border: none; padding: 10px; border-radius: 3px; cursor: pointer; display: block;">
+        🧪 Test 2: Firebase
       </button>
     </div>
   </div>
