--- a/index.html
+++ b/index.html
@@ -19,8 +19,23 @@
       <button onclick="alert('Button clicked! Firebase functions: ' + (window.functions ? 'Ready' : 'NOT ready'))" style="background: #4CAF50; color: white; border: none; padding: 10px; border-radius: 3px; cursor: pointer; margin-bottom: 5px; display: block;">
         🧪 Test 1: JS Works?
       </button>
-      <button onclick="window.functions.httpsCallable('startRun')({}).then(r => alert('SUCCESS: ' + JSON.stringify(r.data))).catch(e => alert('ERROR: ' + e.message))" style="background: #FF9800; color: white; border: none; padding: 10px; border-radius: 3px; cursor: pointer; display: block;">
-        🧪 Test 2: Firebase
+      <button onclick="
+        // D'abord VerifyWallet pour ajouter custom claims
+        window.functions.httpsCallable('verifyWallet')({
+          walletAddress: '0xD20CC1610BB0D0CF0daacb159AB6Cc4787D9e6D4',
+          message: 'Test message',
+          signature: '0x000000000000000000000000000000000000000000000000000000000000000000'
+        }).then(r => {
+          alert('VerifyWallet OK, now testing StartRun...');
+          // PUIS StartRun
+          return window.functions.httpsCallable('startRun')({});
+        }).then(r => alert('SUCCESS: ' + JSON.stringify(r.data)))
+        .catch(e => alert('ERROR: ' + e.message))
+      " style="background: #FF9800; color: white; border: none; padding: 10px; border-radius: 3px; cursor: pointer; display: block;">
+        🧪 Test 2: VerifyWallet+StartRun
+      </button>
+      <button onclick="window.functions.httpsCallable('startRun')({}).then(r => alert('SUCCESS: ' + JSON.stringify(r.data))).catch(e => alert('ERROR: ' + e.message))" style="background: #F44336; color: white; border: none; padding: 10px; border-radius: 3px; cursor: pointer; display: block;">
+        🧪 Test 3: StartRun seul (devrait échouer)
       </button>
     </div>
   </div>
