--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
   <link rel="stylesheet" href="TemplateData/style.css">
 </head>
-<body>
+<body style="background-color: #9c8cfa; margin: 0; padding: 0;">
   <div id="unity-container" class="unity-desktop">
     <canvas id="unity-canvas" width="1100" height="550"></canvas>
     <div id="unity-loading-bar">
